# document-research

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/skills/technical-design/: SKILL.md
.claude/skills/technical-design/references/: hickey-concepts.md  process-cheatsheet.md
.claude/skills/thesis-report/: SKILL.md
.claude/skills/thesis-report/assets/: cover-template.docx  school-structure-guide.docx
.claude/skills/thesis-report/references/: chapter-structure.md  style-guide.md
backend/api/: CLAUDE.md  DocumentResearch.slnx
backend/api/DocumentResearch.Api/: DocumentResearch.Api.csproj  DocumentResearch.Api.http  Program.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.json
backend/api/DocumentResearch.Api.Tests/: DocumentResearch.Api.Tests.csproj  GetDocumentByIdEndpointTests.cs  UnitTest1.cs
backend/api/DocumentResearch.Api.Tests/Account/: AccountActivityEndpointTests.cs
backend/api/DocumentResearch.Api.Tests/Auth/: AuthTestHelpers.cs  GoogleSignInEndpointTests.cs  MeEndpointTests.cs  SignInActivityLoggingTests.cs  SignOutEndpointTests.cs  StubGoogleTokenVerifier.cs  TestAppFactory.cs
backend/api/DocumentResearch.Api/Data/: Role.cs  (+10 more)
backend/core/: CLAUDE.md  pyproject.toml
backend/core/.claude/skills/fastapi-expert/: SKILL.md
backend/core/.claude/skills/fastapi-expert/evals/: evals.json
backend/core/.claude/skills/fastapi-expert/references/: anthropic-llm.md  async-sqlalchemy.md  config-settings.md  endpoints-routing.md  pgvector.md  pydantic-v2.md  testing-async.md
backend/core/.claude/skills/tdd-python/: SKILL.md
backend/core/.claude/skills/tdd-python/references/: deep-modules.md  interface-design.md  mocking.md  refactoring.md  tests.md
backend/core/src/core/: __init__.py  access.py  auth.py  config.py  db.py  extraction.py  main.py  models.py  storage.py
backend/core/src/core/routers/: ingest.py
backend/core/src/core/services/: ingest.py
backend/core/tests/: test_health.py  test_ingest.py  test_search.py
frontend/web/: CLAUDE.md  angular.json  package-lock.json  package.json  proxy.conf.json
frontend/web/src/: index.html  styles.scss
scripts/db-init/: 00-pgvector.sql
(+161 files in other folders)
